Minimun changes new errors

--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="body">
     <mdc-card class="register" [mdcElevation]="2">
-<p>Thanks for watching if you like don't forgot leave an star on github</p>
+<p>Thanks for downloading, if you liked don't forget to leave a star on github.
+
+</p>
 
 <div style="text-align:center">
   <h1>
