--- a/src/app/ui/top-nav/top-nav.component.html
+++ b/src/app/ui/top-nav/top-nav.component.html
@@ -15,7 +15,7 @@
       <mdc-drawer drawer="modal" #demoModal open>
         <mdc-drawer-header>
           <h3 mdcDrawerTitle>Angular + Truffle = 💓 ÐAPP</h3>
-          <h6 mdcDrawerSubtitle>Escale like a pro!</h6>
+          <h6 mdcDrawerSubtitle>Scale like a pro!</h6>
         </mdc-drawer-header>
         <mdc-drawer-content>
           <mdc-list useActivatedClass>
