cahnges if dont have start metamask or another virtual wallet

--- a/src/app/ui/transaction/transaction.component.html
+++ b/src/app/ui/transaction/transaction.component.html
@@ -1,5 +1,5 @@
 <div class="body">
-  <mdc-card class="transaction" [mdcElevation]="2">
+  <mdc-card class="transaction" [mdcElevation]="2" *ngIf="compatible">
       &nbsp;
       <section class="header" style="text-align:center">
           <h4>Your address is:</h4>
@@ -29,6 +29,11 @@
         &nbsp;
       </div>
       &nbsp;
+  </mdc-card>
+
+  <mdc-card  [mdcElevation]="2" *ngIf="!compatible">
+    <p>  We'are unable to detected metamask 🦊 or you wallet provider💳 ,Start your metamask or check your connection 😥
+    </p>
   </mdc-card>
   </div>
 
