Now you can build in production mode and use the deployed contract  and get a identicon soon will we can use ipfs

--- a/src/app/ui/account/account.component.scss
+++ b/src/app/ui/account/account.component.scss
@@ -12,7 +12,13 @@
   padding-left: 13%;
   padding-right: 13%;
 }
-.logo{
-  width: 50px;
-  height: auto;
+.header{
+  padding: 30px;
 }
+
+.profile{
+  border: 2px solid rgb(9, 180, 192);
+  border-radius: 50%;
+  background-position: center center;
+}
+
