--- a/Frontend/src/app/ui/home/home.component.html
+++ b/Frontend/src/app/ui/home/home.component.html
@@ -5,11 +5,16 @@
 </p>
 
 <div style="text-align:center">
+    <button mdc-button dark unelevated  class="big-round-shape-button black" (click)="GiveStar()">
+        <mdc-icon>
+            <img height="20" src="../../../assets/github.svg">
+          </mdc-icon>
+      Star Repo</button>
   <h1>
     <img class="logo" src="assets/angular.png" alt="logo_angular">Angular
     +
     <img class="logo" src="assets/truffle.png" alt="logo_truffle">Truffle = DApp</h1>
-</div>
+  </div>
 
     </mdc-card>
     </div>
