UI and mobile optimization

--- a/Frontend/src/app/ui/account/account.component.scss
+++ b/Frontend/src/app/ui/account/account.component.scss
@@ -6,6 +6,7 @@
   padding-right: 13%;
 }
 .body{
+  padding-top: 10px;
   max-width:100%;
   margin: 2em auto;
   text-align: center;
@@ -17,7 +18,7 @@
 }
 
 .profile{
-  border: 2px solid rgb(9, 180, 192);
+  border: 5px solid rgb(9, 180, 192);
   border-radius: 50%;
   background-position: center center;
 }
