--- a/Frontend/src/app/ui/top-nav/top-nav.component.html
+++ b/Frontend/src/app/ui/top-nav/top-nav.component.html
@@ -15,23 +15,33 @@
       <mdc-icon *ngIf="resolution >= 599 && !account" routerLink="/account">person</mdc-icon>
     </mdc-top-app-bar-section>
 
-	</mdc-top-app-bar-row>
+  </mdc-top-app-bar-row>
+  <mdc-top-app-bar-row *ngIf="resolution <= 599">
+    <mdc-top-app-bar-section>
+      <mdc-tab-bar fixed align="center" [activeTabIndex]="-1">
+        <mdc-tab-scroller>
+          <mdc-tab label="Home" routerLink="/home"  routerLinkActive="mdc-tab-indicator--active"></mdc-tab>
+          <mdc-tab label="Money" routerLink="/money" routerLinkActive="mdc-tab-indicator--active"></mdc-tab>
+        </mdc-tab-scroller>
+      </mdc-tab-bar>
+    </mdc-top-app-bar-section>
+  </mdc-top-app-bar-row>
 </mdc-top-app-bar>
 <div class="main" #mainContent>
   <div class="content">
     <div class="layout__row--no-wrap demo-drawer-app">
-      <mdc-drawer drawer="modal" #demoModal open>
+      <mdc-drawer drawer="modal" #demoModal>
         <mdc-drawer-header>
           <h3 mdcDrawerTitle>Angular + Truffle = 💓 ÐAPP</h3>
           <h6 mdcDrawerSubtitle>Scale like a pro!</h6>
         </mdc-drawer-header>
         <mdc-drawer-content>
           <mdc-list useActivatedClass>
-              <a mdc-list-item routerLink="/home">
+              <a mdc-list-item routerLink="/home" routerLinkActive="mdc-list-item--activated">
                 <mdc-icon mdcListItemGraphic>favorite</mdc-icon>Home
               </a>
 
-              <a mdc-list-item routerLink="/">
+              <a mdc-list-item routerLink="/money" routerLinkActive="mdc-list-item--activated">
                 <mdc-icon mdcListItemGraphic>money</mdc-icon>Transaction
               </a>
           </mdc-list>
