--- a/Frontend/src/app/ui/transaction/transaction.component.html
+++ b/Frontend/src/app/ui/transaction/transaction.component.html
@@ -25,6 +25,7 @@
       <div class="button-container">
         <button mdc-button secondary unelevated  class="big-round-shape-button" [disabled]="!transactionForm.valid"(click)="transferEth($event)"><mdc-icon *ngIf="!transactionForm.valid">lock</mdc-icon><mdc-icon *ngIf="transactionForm.valid">input</mdc-icon>&nbsp;Transfer Ether</button>
         &nbsp;
+        &nbsp;
         <button mdc-button (click)="reset()" >Reset</button>
         &nbsp;
       </div>
