--- a/Frontend/src/app/ui/top-nav/top-nav.component.html
+++ b/Frontend/src/app/ui/top-nav/top-nav.component.html
@@ -1,1 +1,23 @@
-<p>top-nav works!</p>
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport>
+    <mat-toolbar>Menu</mat-toolbar>
+    <mat-nav-list>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button >
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <div fxLayout="row" fxFill fxLayoutAlign="space-between center">
+        <span>Angular Ðapp</span>
+
+      </div>
+
+    </mat-toolbar>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
