--- a/Frontend/src/app/ui/account/account.component.html
+++ b/Frontend/src/app/ui/account/account.component.html
@@ -14,7 +14,7 @@
 
   </mat-card>
 </div>
-<div class="body" *ngIf="direction == undefined">
+<div class="body">
   <mat-card class="account">
 
     <div style="text-align:center">
