--- a/Frontend/src/app/ui/account/account.component.scss
+++ b/Frontend/src/app/ui/account/account.component.scss
@@ -6,3 +6,19 @@
   padding-right: 13%;
   padding-top: 10px;
 }
+.profile{
+  border: 3px solid #dc3545;
+  border-radius: 50%;
+  background-position: center center;
+  width: 170px;
+  height: 170px;
+}
+
+.profileInfura{
+  border: 3px solid #dc3545;
+  border-radius: 50%;
+  width: 20%;
+  background-position: center center;
+  width: 170px;
+  height: 170px;
+}
