--- a/Frontend/src/app/ui/transaction/transaction.component.html
+++ b/Frontend/src/app/ui/transaction/transaction.component.html
@@ -6,13 +6,14 @@
                 <mat-label>Destination Account</mat-label>
                 <input matInput placeholder="Placeholder">
                 <mat-icon matSuffix>account_balance_wallet</mat-icon>
-                <mat-hint>Hint</mat-hint>
+                <mat-hint></mat-hint>
               </mat-form-field>
+              &nbsp;
               <mat-form-field appearance="outline">
                 <mat-label>Amount</mat-label>
                 <input matInput placeholder="Placeholder">
                 <mat-icon matSuffix>attach_money</mat-icon>
-                <mat-hint>Hint</mat-hint>
+                <mat-hint></mat-hint>
               </mat-form-field>
         </form>
                    
