--- a/Frontend/src/app/ui/transaction/transaction.component.html
+++ b/Frontend/src/app/ui/transaction/transaction.component.html
@@ -35,4 +35,11 @@
         </div>
         &nbsp;
     </mat-card>
+
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="getItems()">GET</button>
+          &nbsp;
+        </div>
+    </div>
   </div>
