--- a/Frontend/src/app/ui/transaction/transaction.component.html
+++ b/Frontend/src/app/ui/transaction/transaction.component.html
@@ -38,7 +38,117 @@
 
     <div class="row">
       <div class="button-container">
-          <button mat-raised-button color="accent" (click)="getItems()">GET</button>
+          <button mat-raised-button color="accent" (click)="getAllItems()">getAllItems</button>
+          &nbsp;
+        </div>
+    </div>
+    
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="getItemById()">getItemById</button>
+          &nbsp;
+        </div>
+    </div>
+
+    
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="addUser()">addUser</button>
+          &nbsp;
+        </div>
+    </div>
+    
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="getAllUsers()">getAllUsers</button>
+          &nbsp;
+        </div>
+    </div>
+
+    
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="getUserById()">getUserById</button>
+          &nbsp;
+        </div>
+    </div>
+
+    
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="addItemToCart()">addItemToCart</button>
+          &nbsp;
+        </div>
+    </div>
+    
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="viewCart()">viewCart</button>
+          &nbsp;
+        </div>
+    </div>
+        
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="updateCart()">updateCart</button>
+          &nbsp;
+        </div>
+    </div>
+    
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="removeItemFromCart()">removeItemFromCart</button>
+          &nbsp;
+        </div>
+    </div>
+
+    
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="addRetailer()">addRetailer</button>
+          &nbsp;
+        </div>
+    </div>
+
+    
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="getRetailerById()">getRetailerById</button>
+          &nbsp;
+        </div>
+    </div>
+
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="getAllRetailer()">getAllRetailer</button>
+          &nbsp;
+        </div>
+    </div>
+    
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="addnewItemToInvt()">addnewItemToInvt</button>
+          &nbsp;
+        </div>
+    </div>
+
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="viewInventory()">viewInventory</button>
+          &nbsp;
+        </div>
+    </div>
+
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="UpdateInventory()">UpdateInventory</button>
+          &nbsp;
+        </div>
+    </div>
+
+    <div class="row">
+      <div class="button-container">
+          <button mat-raised-button color="accent" (click)="removeItemInventory()">removeItemInventory</button>
           &nbsp;
         </div>
     </div>
