--- a/Frontend/src/app/ui/top-nav/top-nav.component.html
+++ b/Frontend/src/app/ui/top-nav/top-nav.component.html
@@ -27,7 +27,7 @@
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        <mat-icon aria-label="Side nav toggle icon" style="width: 50px">menu</mat-icon>
       </button>
         <span>Angular Ðapp</span>
       <span class="example-spacer"></span>
