--- a/Frontend/src/app/ui/cart/cart-list/cart-list.component.html
+++ b/Frontend/src/app/ui/cart/cart-list/cart-list.component.html
@@ -1,1 +1,41 @@
-<p>cart-list works!</p>
+<div *ngIf="isEmpty">
+    <div class="container">
+        <div class="row">
+            <div class="table-responsive m-5" style="background-color: #fff; padding: 10px; border-radius: 5px;">
+                <h3 style="color: #4a4a4a;">Cart List</h3>
+                <table class="table table-striped">
+                    <thead class="thead">
+                        <tr style="color: #4a4a4a;">
+                            <th>Item ID</th>
+                            <th>Item Name</th>
+                            <th>Item Price</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of cartItems" style="color: #4a4a4a;">
+                            <td>{{ item.itemId }}</td>
+                            <td>{{ item.itemName }}</td>
+                            <td>{{ item.itemPrice }}</td>
+                            <td><a><i class='material-icons ' (click)="deleteCartItem(item.itemId)">delete</i></a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="row m-2">
+                <div class="table-responsive m-5">
+                    <button class="btn btn-success" (click)="checkOut(cartItems)">Checkout</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    
+    </div>
+    <div *ngIf="!isEmpty">
+        <div class="row mt-5">
+            <div class="col-12 text-center">
+                <span class="display-4 text-dark">Nothing Here</span>
+            </div>
+        </div>
+    </div>
