--- a/Frontend/src/app/ui/item/seller-add-item/seller-add-item.component.html
+++ b/Frontend/src/app/ui/item/seller-add-item/seller-add-item.component.html
@@ -1,1 +1,186 @@
-<p>seller-add-item works!</p>
+
+<div class="container">
+    <div class="row m-5">
+		<div class="col">
+			<div class="card card-width ">
+				<div class="card-header font-weight-bold">
+					<h3 style="color: #4a4a4a;">Add Item</h3>
+				</div>
+                <div class="card-body">
+                    <form action="" #registerForm = 'ngForm'>
+                        
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+									<label for='Name' style="color: #4a4a4a;">Name:</label>
+									<div class="small text-danger font-weight-light " *ngIf="regName.errors?.required && regName.touched"
+									style="display: inline-block; margin-left: 15px;">
+										Please Enter name
+									 </div> 
+									<input 
+										type='text' 
+										id='Name' 
+										class="form-control"
+										name="Name" 
+										#regName= "ngModel"  
+										[(ngModel)]='rName' 
+										placeholder="Name goes here..."
+										required/>
+								</div> 
+							</div>
+                        </div>
+                        
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+									<label for='image' style="color: #4a4a4a;">Image Link:</label>
+									<div class="small text-danger font-weight-light " *ngIf="regimage.errors?.required && regimage.touched"
+									style="display: inline-block; margin-left: 15px;">
+										Please provide link
+									 </div> 
+									<input 
+										type='text' 
+										id='image' 
+										class="form-control"
+										name="image" 
+										#regimage= "ngModel"  
+										[(ngModel)]='rImage' 
+										placeholder="Image link..."
+										required/>
+								</div> 
+							</div>
+						</div>
+                              
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+									<label for='Price' style="color: #4a4a4a;">Price:</label>
+									<div class="small text-danger font-weight-light " *ngIf="regPrice.errors?.required && regPrice.touched"
+									style="display: inline-block; margin-left: 15px;">
+										Please Enter Price
+									 </div> 
+									<input 
+										type='number' 
+										id='Price' 
+										class="form-control"
+										name="Price" 
+										#regPrice= "ngModel"  
+										[(ngModel)]='rPrice' 
+										placeholder="Enter Price" 
+										required/>
+								</div> 
+							</div>
+                        </div>
+                        
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+									<label for='Stock' style="color: #4a4a4a;">Stock:</label>
+									<div class="small text-danger font-weight-light " *ngIf="regStock.errors?.required && regStock.touched"
+									style="display: inline-block; margin-left: 15px;">
+										Please Enter Stock
+									 </div> 
+									<input 
+										type='number' 
+										id='Stock' 
+										class="form-control"
+										name="Stock" 
+										#regStock= "ngModel"  
+										[(ngModel)]='rStock' 
+										placeholder="Enter Stock" 
+										required/>
+								</div> 
+							</div>
+                        </div>
+                        
+                        <div class="row">
+
+							<div class="col">
+								<div class="form-group">
+									<label for='Category' style="color: #4a4a4a;">Category Id:</label>
+									<div class="small text-danger  font-weight-light"  *ngIf="regCategory.errors?.required &&  regCategory.touched"
+									style="display: inline-block; margin-left: 15px;">
+										Please Select Category
+									 </div>  
+									 <select [(ngModel)]="rCategory" 
+									 		  name="category"
+											  #regCategory = "ngModel" 
+											  #device 
+											  id="Category" 
+											  class="form-control" 
+											  (change)="GetSubCategory(device.value)" 
+											  >
+										<option *ngFor="let cat of clist" value="{{cat.categoryId}}" >{{ cat.categoryId || cat.categoryName}}</option>   
+								   </select>
+                                    <!-- <input 
+										type='textarea'
+										class="form-control " 
+										id='Category' 
+										name="Category" 
+										#regCategory = "ngModel"
+										[(ngModel)]='rCategory'
+										required/> -->
+								</div>
+								 
+                            </div>
+
+
+
+							<!-- <div class="col">
+								<div class="form-group">
+									<label for='SubCategory'>SubCategory Id:</label>
+									<div class="small text-danger  font-weight-light"  *ngIf="regSubCategory.errors?.required &&  regSubCategory.touched">
+										Please Enter SubCategory
+									 </div>
+									 <select [(ngModel)]="rSubCategory" name="subCategory" #regSubCategory ="ngModel" id="SubCategory" class="form-control">
+										<option *ngFor="let scat of sclist" value="{{scat.subCategoryId}}">{{ scat.subCategoryId || scat.subCategoryName}}</option>   
+								 	 </select>  
+								</div>
+								 
+                            </div> -->
+                        </div>
+                        
+
+						<div class="row">
+							<div class="col">
+								<div class="form-group">
+									<label for='Remarks' style="color: #4a4a4a;">Seller Id:</label>
+									<div class="small text-danger  font-weight-light"  *ngIf="regRemarks.errors?.required &&  regRemarks.touched"
+									style="display: inline-block; margin-left: 15px;">
+										Please Enter Seller Id
+									 </div>  
+                                    <input 
+										type='text'
+										class="form-control " 
+										id='Remarks' 
+										name="Remarks" 
+										#regRemarks = "ngModel"
+										[(ngModel)]='rRemarks'
+										placeholder="Enter Retailer Id" 
+										required/>
+								</div>
+								 
+                            </div>
+                        </div>
+                         
+                        
+                        <div class="row">
+                            <div class="col">
+                                <button type="submit" 
+										class="btn btn-success"
+										(click)='addItem()'
+										[disabled] = '!registerForm.valid'
+										>Register
+								</button>
+                            </div>
+							<div class="col">
+                                <button type="reset" class="btn btn-secondary">Reset</button>
+                            </div>
+                        </div>
+
+                    </form>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
