added view all retailers UI

--- a/Frontend/src/app/ui/cart/cart-list/cart-list.component.html
+++ b/Frontend/src/app/ui/cart/cart-list/cart-list.component.html
@@ -29,13 +29,15 @@
             </div>
         </div>
     </div>
-    
-    
-    </div>
-    <div *ngIf="!isEmpty">
+
+
+</div>
+<div *ngIf="!isEmpty">
+    <div class="container">
         <div class="row mt-5">
             <div class="col-12 text-center">
                 <span class="display-4 text-dark">Nothing Here</span>
             </div>
         </div>
-    </div>
+    </div>  
+</div>
