--- a/Frontend/src/app/ui/item/item-display/item-display.component.html
+++ b/Frontend/src/app/ui/item/item-display/item-display.component.html
@@ -24,7 +24,7 @@
             <h4>Price: {{ item?.itemPrice }}</h4>
             <h5>Stock: {{ item?.quantity }}</h5>
             <h5>Category: {{ item?.categoryId }}</h5>
-            <h6>Seller: {{ item?.sellerId }}</h6>
+            <h6>Seller: {{ item?.retailerId }}</h6>
             <button 
                 type="button" 
                 class="btn btn-outline-primary"
