--- a/Frontend/src/app/ui/home/home.component.html
+++ b/Frontend/src/app/ui/home/home.component.html
@@ -1,20 +1,95 @@
-<div class="body">
-  <mat-card class="register">
-    <p>Thanks for downloading, if you liked don't forget to leave a star on github.
 
-    </p>
+<div class="container mt-3" style="color: black">
 
-    <div style="text-align:center">
-      <button mat-raised-button dark class="big-round-shape-button black" (click)="GiveStar()">
-        <mat-icon>
-          <img height="20" src="../../../assets/github.svg">
-        </mat-icon>
-        Star Repo</button>
-      <h1>
-        <img class="logo" src="assets/angular.png" alt="logo_angular">Angular
-        +
-        <img class="logo" src="assets/truffle.png" alt="logo_truffle">Truffle = ÐAPP</h1>
+  <div class="row mt-3 ">
+    <div class="col-12">
+      <div class="input-group">
+        <input class="form-control border-secondary py-2" type="search" name="seachrBar" id="searchBar"
+          [(ngModel)]="searchBar" (search)="searchItems()" placeholder="Search Retailers...">
+        <div class="input-group-append">
+          <button class="btn btn-outline-primary" type="button" (click)="searchItems()">
+            <i class="material-icons small align-middle">search </i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <!-- ================================================================================================================================== -->
+  <!-- ================================================================================================================================== -->
+  <!-- ================================================================================================================================== -->
+  <!-- ================================================================================================================================== -->
+
+
+
+
+
+  <div class="row mt-5" *ngIf="!isSearched">
+    <div class="col-sm-12 col-md-6 col-lg-3" *ngFor="let item of allRetailers">
+      <div class="card w-lg-25 w-md-50 w-sm-100 mx-2 my-2  card-hover">
+        <img class="card-img-top img-size " [src]="item.retailerImage" [alt]="item.retailerName" />
+
+        <div class="card-body">
+          <div class="row">
+            <div class="col-12">
+              <h6 class="text-left">{{ item.retailerName }}</h6>
+            </div>
+          </div>
+          
+          <div class="row reveal">
+            <div class="col-12 small " style="text-align: center;">
+              <button class="btn btn-outline-primary" (click)="displayInv(item.retailerId)" style="width: 100%;"> 
+                <small>Details</small>
+                <i class="material-icons small align-middle">more_vert </i>
+              </button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div> <!-- for loop ends here-->
+
+  </div>
+
+
+  <!-- ================================================================================================================================== -->
+  <!-- ================================================================================================================================== -->
+  <!-- ================================================================================================================================== -->
+  <!-- ================================================================================================================================== -->
+
+  <div class="row mt-5" *ngIf="isSearched">
+    <div class="col-sm-12 col-md-6 col-lg-3" *ngIf="searchedRetailers.length == 0">No Retails with that name</div>
+    <div class="col-sm-12 col-md-6 col-lg-3" *ngFor="let item of searchedRetailers">
+      <div class="card w-lg-25 w-md-50 w-sm-100 mx-2 my-2  card-hover">
+        <img class="card-img-top img-size " [src]="item.retailerImage" [alt]="item.retailerName" />
+        
+
+        <div class="card-body">
+          <div class="row">
+            <div class="col-12">
+              <h6 class="text-left">{{ item.retailerName }}</h6>
+            </div>
+          </div>
+          <div class="row reveal">
+            <div class="col-12 small " style="text-align: center;">
+              <button class="btn btn-outline-primary" (click)="displayInv(item.retailerId)"  style="width: 100%;">
+                <small>Details</small>
+                <i class="material-icons small align-middle">more_vert </i>
+               
+              </button>
+            </div>
+
+
+          </div>
+        </div>
+      </div>
     </div>
 
-  </mat-card>
+  </div>
+
+
+
+
 </div>
