--- a/Frontend/src/app/ui/home/home.component.scss
+++ b/Frontend/src/app/ui/home/home.component.scss
@@ -1,17 +1,52 @@
-.body{
-  max-width:100%;
-  margin: 2em auto;
-  text-align: center;
-  padding-left: 13%;
-  padding-right: 13%;
-  padding-top: 10px;
+// .body{
+//   max-width:100%;
+//   margin: 2em auto;
+//   text-align: center;
+//   padding-left: 13%;
+//   padding-right: 13%;
+//   padding-top: 10px;
+// }
+// .logo{
+//   width: 50px;
+//   height: auto;
+// }
+
+// .black{
+//   background-color: black;
+//   padding: 10px;
+// }
+
+
+.img-size{
+  height: 200px;
+  width: 100%;
 }
-.logo{
-  width: 50px;
-  height: auto;
+.card-size{
+  height:400px;
+  width: 220px;
 }
 
-.black{
-  background-color: black;
-  padding: 10px;
+.card-hover:hover{
+  box-shadow: 10px 14px 18px 0 rgba(0, 0, 0, 0.2), 0 10px 20px 0 rgba(0, 0, 0, 0.19);
+  transform: scale(1.009);
+}
+
+.btn:hover{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.card-hover .reveal {
+  visibility: hidden;
+  opacity: 0;
+  height: 0;
+  padding: 0;
+  
+}
+
+.card-hover:hover .reveal {
+  height: auto;
+  visibility: visible;
+  opacity: 10;
+  transition: opacity 1s ease;
+  
 }
