--- a/Frontend/src/app/ui/top-nav/top-nav.component.html
+++ b/Frontend/src/app/ui/top-nav/top-nav.component.html
@@ -53,7 +53,7 @@
 
     </mat-nav-list>
   </mat-sidenav>
- <mat-sidenav-content>
+ <mat-sidenav-content style="background-color: white; height: 100vh;">
     <mat-toolbar color="primary">
       <button
         type="button"
