--- a/Frontend/src/app/ui/bill/bill-view/bill-view.component.html
+++ b/Frontend/src/app/ui/bill/bill-view/bill-view.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="color: black">
     <div class="row border mt-5">
         <div class="col">
             <div class="row mt-2">
