--- a/Frontend/src/app/ui/home/home.component.html
+++ b/Frontend/src/app/ui/home/home.component.html
@@ -34,7 +34,7 @@
         <div class="card-body">
           <div class="row">
             <div class="col-12">
-              <h6 class="text-left">{{ item.retailerName }}</h6>
+              <h6 class="text-left">{{ item.retailerId }}</h6>
             </div>
           </div>
           
