--- a/Frontend/src/app/ui/item/item-display/item-display.component.html
+++ b/Frontend/src/app/ui/item/item-display/item-display.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="color: black;">
     <h3 class="my-4">Item Details</h3>
     <div class="row border" style="height:400px">
       
