--- a/Frontend/src/app/ui/item/seller-add-item/seller-add-item.component.html
+++ b/Frontend/src/app/ui/item/seller-add-item/seller-add-item.component.html
@@ -4,11 +4,34 @@
 		<div class="col">
 			<div class="card card-width ">
 				<div class="card-header font-weight-bold">
-					<h3 style="color: #4a4a4a;">Add Item</h3>
+					<h3 style="color: #4a4a4a;" *ngIf="isEdit">Edit Item</h3>
+					<h3 style="color: #4a4a4a;" *ngIf="!isEdit">Add Item</h3>
 				</div>
                 <div class="card-body">
                     <form action="" #registerForm = 'ngForm'>
-                        
+						
+						<div class="row">
+                            <div class="col">
+                                <div class="form-group">
+									<label for='Id' style="color: #4a4a4a;">Id:</label>
+									<div class="small text-danger font-weight-light " *ngIf="regId.errors?.required && regId.touched"
+									style="display: inline-block; margin-left: 15px;">
+										Please Enter Id
+									 </div> 
+									<input 
+										type='number' 
+										id='Id' 
+										class="form-control"
+										name="Id" 
+										#regId= "ngModel"  
+										[(ngModel)]='rId' 
+										placeholder="Id goes here..."
+										[disabled] = "isEdit"
+										required/>
+								</div> 
+							</div>
+                        </div>
+
                         <div class="row">
                             <div class="col">
                                 <div class="form-group">
@@ -25,6 +48,7 @@
 										#regName= "ngModel"  
 										[(ngModel)]='rName' 
 										placeholder="Name goes here..."
+										[disabled] = "isEdit"
 										required/>
 								</div> 
 							</div>
@@ -46,6 +70,7 @@
 										#regimage= "ngModel"  
 										[(ngModel)]='rImage' 
 										placeholder="Image link..."
+										[disabled] = "isEdit"
 										required/>
 								</div> 
 							</div>
@@ -67,6 +92,7 @@
 										#regPrice= "ngModel"  
 										[(ngModel)]='rPrice' 
 										placeholder="Enter Price" 
+										[disabled] = "isEdit"
 										required/>
 								</div> 
 							</div>
@@ -107,6 +133,7 @@
 											  #regCategory = "ngModel" 
 											  #device 
 											  id="Category" 
+											  [disabled] = "isEdit"
 											  class="form-control" 
 											  >
 										<option *ngFor="let cat of clist" value="{{cat.categoryId}}" >{{  cat.categoryName}}</option>   
@@ -134,6 +161,7 @@
 										#regRetailer = "ngModel"
 										[(ngModel)]='rRetailer'
 										placeholder="Enter Retailer Id" 
+										[disabled] = "isEdit"
 										required/>
 								</div>
 								 
