home component loading fix

--- a/Frontend/src/app/ui/home/home.component.html
+++ b/Frontend/src/app/ui/home/home.component.html
@@ -1,5 +1,19 @@
+<div class="container mt-3" style="color: black" *ngIf="isLoading">
+  <div class="center">
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+  </div>
 
-<div class="container mt-3" style="color: black">
+</div>
+<div class="container mt-3" style="color: black" *ngIf="!isLoading">
 
   <div class="row mt-3 ">
     <div class="col-12">
@@ -37,10 +51,10 @@
               <h6 class="text-left">{{ item.retailerId }}</h6>
             </div>
           </div>
-          
+
           <div class="row reveal">
             <div class="col-12 small " style="text-align: center;">
-              <button class="btn btn-outline-primary" (click)="displayInv(item.retailerId)" style="width: 100%;"> 
+              <button class="btn btn-outline-primary" (click)="displayInv(item.retailerId)" style="width: 100%;">
                 <small>Details</small>
                 <i class="material-icons small align-middle">more_vert </i>
               </button>
@@ -64,7 +78,7 @@
     <div class="col-sm-12 col-md-6 col-lg-3" *ngFor="let item of searchedRetailers">
       <div class="card w-lg-25 w-md-50 w-sm-100 mx-2 my-2  card-hover">
         <img class="card-img-top img-size " [src]="item.retailerImage" [alt]="item.retailerName" />
-        
+
 
         <div class="card-body">
           <div class="row">
@@ -74,10 +88,10 @@
           </div>
           <div class="row reveal">
             <div class="col-12 small " style="text-align: center;">
-              <button class="btn btn-outline-primary" (click)="displayInv(item.retailerId)"  style="width: 100%;">
+              <button class="btn btn-outline-primary" (click)="displayInv(item.retailerId)" style="width: 100%;">
                 <small>Details</small>
                 <i class="material-icons small align-middle">more_vert </i>
-               
+
               </button>
             </div>
 
